# esp32-kalman-bmp280

./: .gitignore  CMakeLists.txt  README.md  build_once.bat  diagram.json  test_kalman.py  wokwi.toml
.claude/: settings.local.json
.github/workflows/: build.yml
main/: CMakeLists.txt  KalmanFilter1D.h  bmp280.hpp  main.cpp
